# wasm-pdf-demo

./: README.md
browser_example/: README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
elixir_example/: .gitignore  README.md  mix.exs
elixir_example/lib/: generate_invoice.ex
elixir_example/lib/mix/tasks/: generate_invoice.ex
elixir_example/test/: elixir_wasm_pdf_test.exs
wasm_invoice/: Cargo.toml  README.md
wasm_invoice/src/: lib.rs
